--- a/project_2/rag_chatbot.ipynb
+++ b/project_2/rag_chatbot.ipynb
@@ -91,10 +91,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "65b49fcb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\vnimmagadda\\AppData\\Local\\miniconda3\\envs\\rag-chatbot\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Libraries imported! You're good to go!\n"
+     ]
+    }
+   ],
    "source": [
     "# Import standard libraries for file handling and text processing\n",
     "import os, pathlib, textwrap, glob\n",
@@ -158,17 +174,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9ff055a6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ignoring wrong pointing object 76 0 (offset 0)\n",
+      "Ignoring wrong pointing object 81 0 (offset 0)\n",
+      "Ignoring wrong pointing object 80 0 (offset 0)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 8 PDF pages from 4 files.\n"
+     ]
+    }
+   ],
    "source": [
     "pdf_paths = glob.glob(\"data/Everstorm_*.pdf\")\n",
     "raw_docs = []\n",
     "\n",
-    "\"\"\"\n",
-    "YOUR CODE HERE (~2 lines of code)\n",
-    "\"\"\"\n",
+    "for pdf_path in pdf_paths:\n",
+    "    loader = PyPDFLoader(pdf_path)\n",
+    "    raw_docs.extend(loader.load())\n",
     "\n",
     "print(f\"Loaded {len(raw_docs)} PDF pages from {len(pdf_paths)} files.\")"
    ]
@@ -204,9 +237,8 @@
     "]\n",
     "\n",
     "try:\n",
-    "    ########################\n",
-    "    #### Your code here (~2-3 lines of code) ####\n",
-    "    ########################\n",
+    "    \n",
+    "    \n",
     "    print(f\"Fetched {len(raw_docs)} documents from the web.\")\n",
     "except Exception as e:\n",
     "    print(\"⚠️  Web fetch failed, using offline copies:\", e)\n",
@@ -239,15 +271,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "450d48a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ 42 chunks ready for embedding\n"
+     ]
+    }
+   ],
    "source": [
     "chunks = []\n",
-    "\"\"\"\n",
-    "YOUR CODE HERE (~2 lines of code)\n",
-    "\"\"\"\n",
+    "\n",
+    "splitter = RecursiveCharacterTextSplitter(chunk_size=300, chunk_overlap=30)\n",
+    "chunks = splitter.split_documents(raw_docs)\n",
+    "\n",
     "print(f\"✅ {len(chunks)} chunks ready for embedding\")"
    ]
   },
@@ -289,18 +330,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "4a222122",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "384\n"
+     ]
+    }
+   ],
    "source": [
     "embedding_vector = []\n",
     "\n",
     "# Embed the sentence \"Hello world! and store it in an embedding_vector.\n",
-    "\"\"\"\n",
-    "YOUR CODE HERE (~2 lines of code)\n",
-    "\"\"\"\n",
+    "\n",
+    "print (len(embedding_vector))\n",
+    "\n",
+    "embedder = SentenceTransformerEmbeddings(model_name=\"thenlper/gte-small\")\n",
+    "embedding_vector = embedder.embed_query(\"Hello World!\")\n",
+    "\n",
+    "\n",
     "print(len(embedding_vector))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6115080a",
+   "metadata": {},
+   "source": [
+    "# (me) 3.1.1 - isnpect embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "900b6222",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Type: <class 'list'>\n",
+      "Dimensions: 384\n",
+      "\n",
+      "First 20 numbers:\n",
+      "[-0.006060201209038496, 0.011795214377343655, 0.05019371584057808, -0.016164293512701988, 0.019703760743141174, 0.02178840897977352, 0.034210965037345886, 0.03776613622903824, -0.00986576359719038, 0.013083266094326973, -0.0030241103377193213, -0.08124058693647385, 0.047853484749794006, 0.07356517761945724, 0.006607814226299524, 0.020734356716275215, 0.0180941354483366, 0.004758546128869057, -0.08072061836719513, 0.011682042852044106]\n",
+      "\n",
+      "Last 20 numbers:\n",
+      "[-0.05280742049217224, -0.04039136692881584, -0.03128005564212799, 0.04365857318043709, 0.03272005915641785, -0.029154755175113678, -0.023435834795236588, -0.020584560930728912, -0.0036635934375226498, -0.007173685822635889, 0.007877232506871223, -0.039182957261800766, -0.011910034343600273, -0.0015436623943969607, -0.03177398070693016, 0.03531016781926155, -0.05085616186261177, 0.027991047129034996, 0.032159287482500076, 0.05177369341254234]\n",
+      "\n",
+      "Statistics:\n",
+      "  Min value: -0.2921\n",
+      "  Max value: 0.2669\n",
+      "  Average: 0.0002\n",
+      "\n",
+      "First 10 numbers for each sentence:\n",
+      "Hello world!         → [-0.006060201209038496, 0.011795214377343655, 0.05019371584057808, -0.016164293512701988, 0.019703760743141174, 0.02178840897977352, 0.034210965037345886, 0.03776613622903824, -0.00986576359719038, 0.013083266094326973]\n",
+      "Goodbye world!       → [-0.020066726952791214, 0.0007769080111756921, 0.05711974576115608, -0.003962262533605099, 0.056516800075769424, 0.0105754928663373, 0.03702670708298683, 0.06443952023983002, 0.007520319428294897, -0.010799229145050049]\n",
+      "Shipping policy      → [0.015690777450799942, -0.0005976030952297151, 0.06938160955905914, -0.05324788764119148, 0.013354187831282616, 0.03235180675983429, 0.03225815296173096, 0.03756372258067131, -0.02985742874443531, 0.004028954077512026]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Inspect the embedding for \"Hello world!\"\n",
+    "print(f\"Type: {type(embedding_vector)}\")\n",
+    "print(f\"Dimensions: {len(embedding_vector)}\")\n",
+    "print(f\"\\nFirst 20 numbers:\")\n",
+    "print(embedding_vector[:20])\n",
+    "print(f\"\\nLast 20 numbers:\")\n",
+    "print(embedding_vector[-20:])\n",
+    "print(f\"\\nStatistics:\")\n",
+    "print(f\"  Min value: {min(embedding_vector):.4f}\")\n",
+    "print(f\"  Max value: {max(embedding_vector):.4f}\")\n",
+    "print(f\"  Average: {sum(embedding_vector)/len(embedding_vector):.4f}\")\n",
+    "\n",
+    "# Compare different sentences\n",
+    "test_embeddings = {\n",
+    "    \"Hello world!\": embedder.embed_query(\"Hello world!\"),\n",
+    "    \"Goodbye world!\": embedder.embed_query(\"Goodbye world!\"),\n",
+    "    \"Shipping policy\": embedder.embed_query(\"Shipping policy\"),\n",
+    "}\n",
+    "\n",
+    "print(\"\\nFirst 10 numbers for each sentence:\")\n",
+    "for text, emb in test_embeddings.items():\n",
+    "    print(f\"{text:20} → {emb[:10]}\")"
    ]
   },
   {
@@ -322,10 +440,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "611eda64",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Vector store with 42 embeddings\n"
+     ]
+    }
+   ],
    "source": [
     "# Expected steps:\n",
     "    # 1. Build the FAISS index from the list of document chunks and their embeddings.\n",
@@ -333,9 +459,11 @@
     "    # 3. Save the vector store locally (e.g., under \"faiss_index\").\n",
     "    # 4. Print a short confirmation showing how many embeddings were stored.\n",
     "\n",
-    "\"\"\"\n",
-    "YOUR CODE HERE (~3-5 lines of code)\n",
-    "\"\"\"\n",
+    "\n",
+    "vectordb = FAISS.from_documents(chunks, embedder)\n",
+    "retreiver=vectordb.as_retriever(search_kwargs={\"k\":8})\n",
+    "vectordb.save_local(\"faiss_index\")\n",
+    "\n",
     "\n",
     "print(\"✅ Vector store with\", vectordb.index.ntotal, \"embeddings\")"
    ]
@@ -402,18 +530,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b1d34a32",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 + 2 = 4\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Expected steps:\n",
     "    # 1. Initialize the model (for example, gemma3:1b) with a low temperature such as 0.1 for more factual outputs.\n",
     "    # 2. Use llm.invoke() with a short test prompt and print the response to verify that the model runs successfully.\n",
     "\n",
-    "\"\"\"\n",
-    "YOUR CODE HERE (~1-2 line of code)\n",
-    "\"\"\""
+    "llm = Ollama(model=\"gemma3:1b\", temperature=0.1)\n",
+    "response = llm.invoke(\"what is 2+2\")\n",
+    "print(response)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -444,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "dcecb2b6",
    "metadata": {},
    "outputs": [],
@@ -457,7 +597,6 @@
     "1) Use ONLY the provided <context> to answer.\n",
     "2) If the answer is not in the context, say: \"I don't know based on the retrieved documents.\"\n",
     "3) Be concise and accurate. Prefer quoting key phrases from the context.\n",
-    "4) When possible, cite sources as [source: {source}] using the metadata.\n",
     "\n",
     "CONTEXT:\n",
     "{context}\n",
@@ -480,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "0b138b3d",
    "metadata": {},
    "outputs": [],
@@ -490,9 +629,10 @@
     "    # 2. Initialize your LLM using Ollama with the gemma3:1b model and a low temperature (e.g., 0.1) for reliable, grounded responses.\n",
     "    # 3. Build a ConversationalRetrievalChain by combining the LLM, the retriever, and your custom prompt and name it \"chain\".\n",
     "\n",
-    "\"\"\"\n",
-    "YOUR CODE HERE (~3-5 lines of code)\n",
-    "\"\"\""
+    "\n",
+    "prompt = PromptTemplate(template=SYSTEM_TEMPLATE, input_variables=[\"context\",\"question\"])\n",
+    "llm = Ollama(model=\"gemma3:1b\", temperature=0.1)\n",
+    "chain = ConversationalRetrievalChain.from_llm(llm=llm, retriever=retreiver, combine_docs_chain_kwargs={\"prompt\":prompt})\n"
    ]
   },
   {
@@ -523,10 +663,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "8f6d7a7d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Q: If I'm not happy with my purchase, what is your refund policy and how do I start a return?\n",
+      "A: “Our refund policy is simple: if you’re not happy with your purchase, you can initiate a return within 30 days of delivery for a full refund. You’ll need to scan your return at the warehouse receipt. If the carrier scans the return label, authorization drops when our returns team receives the original item. Return Window Exceptions: Holiday gift purchases made before November 30th are extended to January 31st, and “Final Sale” and custom-embroidered items are also eligible for a return period of 31 January.\n",
+      "\n",
+      "To start a return, you’ll need to:\n",
+      "\n",
+      "1.  Scan your return at the warehouse receipt.\n",
+      "2.  Send the item back to us within 30 days of receiving the scan.\n",
+      "3.  You’ll receive a prepaid label to print and pack securely.\n",
+      "4.  Select “Refund” or “Exchange” when placing your return request.\n",
+      "\n",
+      "For international returns, the carrier scans the return label.  The cost of the return label is approximately $15–$25, and duties and taxes are non-refundable.\n",
+      "\n",
+      "You can find more detailed information on our website: [https://www.everstorm.example](https://www.everstorm.example)\n",
+      "\n",
+      "Where’s your Klarna statement? You can log in at [https://klarna.com](https://klarna.com) to check your statement.”\n",
+      "\n",
+      "\n",
+      "Q: How long will delivery take for a standard order, and where can I track my package once it ships?\n",
+      "A: A standard order typically takes 7.95 days to arrive, and you can track your package once it ships through the tracking link provided.\n",
+      "\n",
+      "\n",
+      "Q: What's the quickest way to contact your support team, and what are your operating hours?\n",
+      "A: You can contact our support team through the following channels:\n",
+      "\n",
+      "*   **Logistics@everstorm.example:** +1 (406) 555-0199\n",
+      "*   **Live chat:** 08:00–18:00 MT\n",
+      "\n",
+      "Your operating hours are:\n",
+      "\n",
+      "*   **Order inquiries:** within 30 minutes of order placement.\n",
+      "*   **Returns & Exchanges:** within 30 days of delivery for a refund or free size exchange.\n",
+      "*   **Klarna statement:** emails the payment schedule shortly after order confirmation.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "test_questions = [\n",
     "    \"If I'm not happy with my purchase, what is your refund policy and how do I start a return?\",\n",
@@ -539,9 +720,15 @@
     "    # 2. Loop through test_questions, pass each question and the current chat history to the chain, and append the new answer.\n",
     "    # 3. Print each question and the LLM's response to verify it’s working correctly.\n",
     "\n",
-    "\"\"\"\n",
-    "YOUR CODE HERE\n",
-    "\"\"\""
+    "\n",
+    "chat_history = []\n",
+    "for question in test_questions:\n",
+    "    result = chain({\"question\": question, \"chat_history\":chat_history})\n",
+    "    answer = result[\"answer\"]\n",
+    "    print(f\"\\nQ: {question}\")\n",
+    "    print(f\"A: {answer}\\n\")\n",
+    "    chat_history.append((question, answer))\n",
+    "    \n"
    ]
   },
   {
@@ -629,7 +816,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.12"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
