Complete Project 3: Ask-the-Web Agent
- Implemented tool calling with LLMs (Sections 2-3)
- Built LangChain ReAct agent with web search (Sections 4-5)
- Set up FastAPI backend + React frontend UI (Section 6)
- Updated backend to use mistral:7b for better agent performance
- Successfully created Perplexity-style AI assistant

--- a/project_3/ask_the_web_agent.ipynb
+++ b/project_3/ask_the_web_agent.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4a536f58",
    "metadata": {},
    "outputs": [],
@@ -123,14 +123,14 @@
     "#   get_current_weather(\"San Francisco\") → \"It is 23°C and sunny in San Francisco.\"\n",
     "#\n",
     "\n",
-    "\"\"\"\n",
-    "YOUR CODE HERE (~2-3 lines of code)\n",
-    "\"\"\""
+    "def get_current_weather(city: str, unit: str = \"celsius\") -> str:\n",
+    "    \"\"\"Get the current weatehr for a given sity,\"\"\"\n",
+    "    return f\"It is 23°C and sunny in {city}.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0a43c3e4",
    "metadata": {},
    "outputs": [],
@@ -150,9 +150,14 @@
     "# Try experimenting with different system and user prompts\n",
     "# ---------------------------------------------------------\n",
     "\n",
-    "\"\"\"\n",
-    "YOUR CODE HERE\n",
-    "\"\"\""
+    "SYSTEM_PROMPT = \"\"\"You are a helpful assistant with access to tools. When you need to use a tool, respond with:\n",
+    "  TOOL_CALL: {\"name\": \"tool_name\", \"args\": {\"arg1\": \"value1\"}}\n",
+    "\n",
+    "  Available tools:\n",
+    "  - get_current_weather(city: str, unit: str = \"celsius\"): Get the current weather for a given city.\n",
+    "  \"\"\"\n",
+    "\n",
+    "USER_QUESTION = \"What is the weather in San Diego today?\""
    ]
   },
   {
@@ -167,10 +172,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "027cb75c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Raw LLM output: TOOL_CALL: {\"name\": \"get_current_weather\", \"args\": {\"city\": \"San Diego\"}}\n"
+     ]
+    }
+   ],
    "source": [
     "from openai import OpenAI\n",
     "\n",
@@ -185,25 +198,44 @@
     "# Steps:\n",
     "#   1. Use the Ollama client to create a chat completion. \n",
     "#       - You may find some examples here: https://platform.openai.com/docs/api-reference/chat/create\n",
-    "#       - If you are unsure, search the web for \"client.chat.completions.create\"\n",
-    "#   2. Print the raw response.\n",
+    "#   • Return a short, human-readable sentence describing the weather.\n",
     "#\n",
-    "# Expected:\n",
-    "#   The model should return something like:\n",
-    "#   TOOL_CALL: {\"name\": \"get_current_weather\", \"args\": {\"city\": \"San Diego\"}}\n",
+    "# Example expected behavior:\n",
+    "#   get_current_weather(\"San Francisco\") → \"It is 23°C and sunny in San Francisco.\"\n",
+    "#\n",
+    "\n",
     "# ---------------------------------------------------------\n",
     "\n",
-    "\"\"\"\n",
-    "YOUR CODE HERE (~5-10 lines of code)\n",
-    "\"\"\""
+    "response = client.chat.completions.create(\n",
+    "    model=\"gemma3:1b\",\n",
+    "    messages=[\n",
+    "        {\"role\": \"system\", \"content\": SYSTEM_PROMPT},\n",
+    "        {\"role\": \"user\", \"content\": USER_QUESTION}\n",
+    "    ],\n",
+    "    temperature=0\n",
+    ")\n",
+    "\n",
+    "raw_output = response.choices[0].message.content\n",
+    "print(\"Raw LLM output:\", raw_output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "94aeb4d8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Captured: {\"name\": \"get_current_weather\", \"args\": {\"city\": \"San Diego\"}}\n",
+      "Repr: '{\"name\": \"get_current_weather\", \"args\": {\"city\": \"San Diego\"}}'\n",
+      "Calling tool `get_current_weather` with args {'city': 'San Diego'}\n",
+      "Result: It is 23°C and sunny in San Diego.\n"
+     ]
+    }
+   ],
    "source": [
     "# ---------------------------------------------------------\n",
     "# Step 4: Parse the LLM output and call the tool\n",
@@ -225,9 +257,23 @@
     "\n",
     "import re, json\n",
     "\n",
-    "\"\"\"\n",
-    "YOUR CODE HERE (~5-10 lines of code)\n",
-    "\"\"\"\n"
+    "match = re.search(r'TOOL_CALL:\\s*(\\{.*\\})', raw_output)\n",
+    "if match:\n",
+    "    captured = match.group(1)\n",
+    "    print(\"Captured:\", captured)\n",
+    "    print(\"Repr:\", repr(captured))\n",
+    "    tool_call = json.loads(match.group(1))\n",
+    "    tool_name = tool_call[\"name\"]\n",
+    "    tool_args = tool_call[\"args\"]\n",
+    "    \n",
+    "    print(f\"Calling tool `{tool_name}` with args {tool_args}\")\n",
+    "\n",
+    "    if tool_name == \"get_current_weather\":\n",
+    "        result = get_current_weather(**tool_args)\n",
+    "        print(f\"Result: {result}\")\n",
+    "        \n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -246,10 +292,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "ce911b28",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'description': 'Get the current weatehr for a given sity,',\n",
+      " 'name': 'get_current_weather',\n",
+      " 'parameters': {'city': {'default': None, 'type': 'str'},\n",
+      "                'unit': {'default': 'celsius', 'type': 'str'}}}\n"
+     ]
+    }
+   ],
    "source": [
     "# ---------------------------------------------------------\n",
     "# Generate a JSON schema for a tool automatically\n",
@@ -270,10 +327,25 @@
     "\n",
     "\n",
     "def to_schema(fn):\n",
-    "    \"\"\"\n",
-    "    YOUR CODE HERE (~8-15 lines of code)\n",
-    "    \"\"\"\n",
-    "    pass\n",
+    "    \"\"\"Convert a Python function to a JSON schema for the LLM.\"\"\"\n",
+    "    sig = inspect.signature(fn)\n",
+    "\n",
+    "    schema = {\n",
+    "        \"name\": fn.__name__,\n",
+    "        \"description\": fn.__doc__.strip() if fn.__doc__ else \"\",\n",
+    "        \"parameters\": {}\n",
+    "    }\n",
+    "\n",
+    "    for param_name, param in sig.parameters.items():\n",
+    "        param_type = param.annotation.__name__ if param.annotation != inspect.Parameter.empty else \"string\"\n",
+    "        default = param.default if param.default != inspect.Parameter.empty else None\n",
+    "\n",
+    "        schema[\"parameters\"][param_name] = {\n",
+    "            \"type\": param_type,\n",
+    "            \"default\": default\n",
+    "        }\n",
+    "\n",
+    "    return schema\n",
     "\n",
     "tool_schema = to_schema(get_current_weather)\n",
     "pprint(tool_schema)"
@@ -281,10 +353,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c1163f18",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Raw LLM output: TOOL_CALL: {\"name\": \"get_current_weather\", \"args\": {\"city\": \"San Diego\"}}\n"
+     ]
+    }
+   ],
    "source": [
     "# ---------------------------------------------------------\n",
     "# Provide the tool schema to the model\n",
@@ -305,9 +385,22 @@
     "#   which tool to use and with what arguments.\n",
     "# ---------------------------------------------------------\n",
     "\n",
-    "\"\"\"\n",
-    "YOUR CODE HERE (~5-12 lines of code)\n",
-    "\"\"\""
+    "tool_spec = json.dumps(tool_schema, indent=2)\n",
+    "\n",
+    "messages = [\n",
+    "    {\"role\": \"system\", \"content\": SYSTEM_PROMPT},\n",
+    "    {\"role\": \"system\", \"name\": \"tool_spec\", \"content\": f\"Available tools:\\n{tool_spec}\"},\n",
+    "    {\"role\": \"user\", \"content\": USER_QUESTION}\n",
+    "]\n",
+    "\n",
+    "response = client.chat.completions.create(\n",
+    "    model=\"gemma3:1b\",\n",
+    "    messages=messages,\n",
+    "    temperature=0\n",
+    ")\n",
+    "\n",
+    "raw_output = response.choices[0].message.content\n",
+    "print(\"Raw LLM output:\", raw_output)"
    ]
   },
   {
@@ -331,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "c609d97c",
    "metadata": {},
    "outputs": [],
@@ -354,17 +447,39 @@
     "\n",
     "from langchain.tools import tool\n",
     "\n",
-    "\"\"\"\n",
-    "YOUR CODE HERE (~5 lines of code)\n",
-    "\"\"\""
+    "@tool\n",
+    "def get_weather(city: str) -> str:\n",
+    "    \"\"\"Get the current weather for a given city in celsius.\"\"\"\n",
+    "    return f\"It is 23°C and sunny in {city}.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "9552348d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3m To determine if I need an umbrella in Seattle today, I first need to find out the current weather in Seattle. So, I will use the get_weather function with Seattle as input.\n",
+      "\n",
+      "Action: get_weather\n",
+      "Action Input: Seattle\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3mIt is 23°C and sunny in Seattle.\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3m Since it's sunny and 23°C in Seattle, you probably don't need an umbrella today as there's no rain forecasted. However, weather can change quickly, so it's always a good idea to check the forecast for the rest of the day if you plan on being outside for a long time.\n",
+      "\n",
+      "Final Answer: You likely do not need an umbrella in Seattle today, but keep an eye on the forecast for any potential changes.\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "You likely do not need an umbrella in Seattle today, but keep an eye on the forecast for any potential changes.\n"
+     ]
+    }
+   ],
    "source": [
     "# ---------------------------------------------------------\n",
     "# Step 2: Initialize the LangChain Agent\n",
@@ -389,9 +504,24 @@
     "from langchain_community.chat_models import ChatOllama\n",
     "from langchain.agents import initialize_agent, Tool, AgentType\n",
     "\n",
-    "\"\"\"\n",
-    "YOUR CODE HERE (~5 lines of code)\n",
-    "\"\"\"\n"
+    "# Create the LLM\n",
+    "# llm = ChatOllama(model=\"gemma3:1b\", temperature=0)\n",
+    "llm = ChatOllama(model=\"mistral:7b\", temperature=0)  # or \"llama3.2:3b\"\n",
+    "\n",
+    "# Add tools to a list\n",
+    "tools = [get_weather]\n",
+    "\n",
+    "# Initialize the agent\n",
+    "agent = initialize_agent(\n",
+    "    tools=tools,\n",
+    "    llm=llm,\n",
+    "    agent=AgentType.ZERO_SHOT_REACT_DESCRIPTION,\n",
+    "    verbose=True\n",
+    ")\n",
+    "\n",
+    "# Test it\n",
+    "response = agent.run(\"Do I need an umbrella in Seattle today?\")\n",
+    "print(response)\n"
    ]
   },
   {
@@ -424,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,14 +576,26 @@
     "from ddgs import DDGS\n",
     "from langchain.tools import tool\n",
     "\n",
-    "d\"\"\"\n",
-    "YOUR CODE HERE (~5-10 lines of code)\n",
-    "\"\"\"\n"
+    "@tool\n",
+    "def web_search(query : str) -> str:\n",
+    "    \"\"\"Search the web using DuckDuckGo and return top results with titles and URLs.\"\"\"\n",
+    "    ddgs = DDGS()\n",
+    "    results = ddgs.text(query, max_results=5)\n",
+    "\n",
+    "    if not results:\n",
+    "        return \"no results found.\"\n",
+    "    \n",
+    "    formatted = []\n",
+    "    for i, result in enumerate (results, 1):\n",
+    "        formatted.append(f\"{i}. {result['title']}\\n   {result['href']}\\n   {result['body']}\")\n",
+    "    \n",
+    "    return \"\\n\\n\".join(formatted)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,12 +618,21 @@
     "#   The agent should be ready to accept user queries\n",
     "#   and use your web search tool when needed.\n",
     "# ---------------------------------------------------------\n",
+    "from langchain_community.chat_models import ChatOllama\n",
     "from langchain.agents import initialize_agent, AgentType\n",
     "from langchain.llms import OpenAI\n",
     "\n",
-    "\"\"\"\n",
-    "YOUR CODE HERE (~5 lines of code)\n",
-    "\"\"\"\n"
+    "llm = ChatOllama(model=\"mistral:7b\", temperature=0)\n",
+    "tools = [web_search]\n",
+    "\n",
+    "agent= initialize_agent(\n",
+    "    tools=tools,\n",
+    "    llm=llm,\n",
+    "    agent=AgentType.ZERO_SHOT_REACT_DESCRIPTION,\n",
+    "    verbose=True\n",
+    ")\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -494,9 +645,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3m To find out about the latest developments in AI agents in 2025, I will perform a web search.\n",
+      "\n",
+      "Action: web_search\n",
+      "Action Input: latest developments in AI agents in 2025\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3m1. Gartner Hype Cycle Identifies Top AI Innovations in 2025\n",
+      "   https://www.gartner.com/en/newsroom/press-releases/2025-08-05-gartner-hype-cycle-identifies-top-ai-innovations-in-2025\n",
+      "   AI agents and AI-ready data are the two fastest advancing technologies on the 2025 Gartner Hype Cycle for Artificial Intelligence, according to Gartner.\n",
+      "\n",
+      "2. AI Agents in 2025: Expectations vs. Reality | IBM\n",
+      "   https://www.ibm.com/think/insights/ai-agents-2025-expectations-vs-reality\n",
+      "   August 4, 2025 - “The big thing about agents is that they have the ability to plan,” he outlines. “They have the ability to reason, to use tools and perform tasks, and they need to do it at speed and scale.” He cites 4 developments that, compared to the best models of 12 to 18 months ago, mean that the models of early 2025 can power the agents envisioned by the proponents of this narrative:\n",
+      "\n",
+      "3. The 10 Hottest Agentic AI Tools And Agents Of 2025 (So Far)\n",
+      "   https://www.crn.com/news/ai/2025/10-hottest-agentic-ai-tools-and-agents-of-2025-so-far\n",
+      "   CRN breaks down the 10 coolest agentic AI products, tools and agents in 2025 so far which include new offerings from AWS, Databricks, Dataiku, Google Cloud, GitHub, IBM, Salesforce, ServiceNow and Snowflake.\n",
+      "\n",
+      "4. Developments in AI Agents: Q1 2025 Landscape Analysis — The Science of Machine Learning & AI\n",
+      "   https://www.ml-science.com/blog/2025/4/17/developments-in-ai-agents-q1-2025-landscape-analysis\n",
+      "   April 29, 2025 - The first four months of 2025 witnessed a surge of activity in the AI agent space, encompassing significant research advancements, a wave of product launches from major technology players, and tangible progress in core agent capabilities.\n",
+      "\n",
+      "5. 6 AI trends you’ll see more of in 2025\n",
+      "   https://news.microsoft.com/source/features/ai/6-ai-trends-youll-see-more-of-in-2025/\n",
+      "   May 1, 2025 - One of the most exciting things to watch in 2025 will be how AI’s use in scientific research fuels progress in addressing some of the world’s most pressing concerns, says Ashley Llorens, corporate vice president and managing director at Microsoft Research. “We’ll start to see these tools having a measurable impact on the throughput of the people and institutions who are working on these huge problems, such as designing sustainable materials and accelerating development of life-saving drugs,” Llorens says.\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3m I now know the final answer\n",
+      "Final Answer: The latest developments in AI agents in 2025 include advancements in planning, reasoning, and task performance capabilities, as well as product launches from major technology players such as AWS, Databricks, Dataiku, Google Cloud, GitHub, IBM, Salesforce, ServiceNow, and Snowflake. Additionally, there has been a surge of activity in the AI agent space with significant research advancements and progress in core agent capabilities. Furthermore, AI's use in scientific research is expected to have a measurable impact on addressing pressing concerns such as designing sustainable materials and accelerating development of life-saving drugs.\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "\n",
+      "==================================================\n",
+      "The latest developments in AI agents in 2025 include advancements in planning, reasoning, and task performance capabilities, as well as product launches from major technology players such as AWS, Databricks, Dataiku, Google Cloud, GitHub, IBM, Salesforce, ServiceNow, and Snowflake. Additionally, there has been a surge of activity in the AI agent space with significant research advancements and progress in core agent capabilities. Furthermore, AI's use in scientific research is expected to have a measurable impact on addressing pressing concerns such as designing sustainable materials and accelerating development of life-saving drugs.\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# ---------------------------------------------------------\n",
@@ -516,9 +707,11 @@
     "#   and generate a short summary response.\n",
     "# ---------------------------------------------------------\n",
     "\n",
-    "\"\"\"\n",
-    "YOUR CODE HERE (~2-5 lines of code)\n",
-    "\"\"\"\n",
+    "response = agent.invoke({\"input\":\"what are the latest developments in AI agents in 2025?\"})\n",
+    "print (\"\\n\"+\"=\"*50)\n",
+    "print (response['output'])\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -561,7 +754,7 @@
   "kernelspec": {
    "display_name": "web_agent",
    "language": "python",
-   "name": "python3"
+   "name": "web_agent"
   },
   "language_info": {
    "codemirror_mode": {
@@ -573,7 +766,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
